[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ucache"
dynamic = ["version"]
description = "lightweight and efficient caching library"
readme = "README.md"
authors = [
    { name = "Charles Leifer", email = "coleifer@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Repository = "https://github.com/coleifer/ucache"
Documentation = "https://github.com/coleifer/ucache/blob/master/README.md"

[project.optional-dependencies]
pylibmc= ["pylibmc"]
memcached = ["pymemcached"]
redis = ["redis"]
sqlite = ["peewee"]
greendb = ["greendb"]

[tool.setuptools]
py-modules = ["ucache"]

[tool.setuptools.dynamic]
version = { attr = "ucache.__version__" }
